# Audyn

./: .gitignore  CMakeLists.txt  Makefile  README.md  aes_input_line_by_line.md  archive_policy_line_by_line.md  audio_queue_c_line_by_line.md  audio_queue_h_line_by_line.md  audyn.c  audyn_line_by_line.md  frame_pool.md  frame_pool_h_line_by_line.md  frame_pool_line_by_line.md  jitter_buffer_line_by_line.md  level_meter_line_by_line.md  log_line_by_line.md  opus_sink_line_by_line.md  pipewire_input_line_by_line.md  ptp_clock_line_by_line.md  wav_sink_line_by_line.md  web_backend_line_by_line.md  web_frontend_line_by_line.md  worker_line_by_line.md
.github/workflows/: build-deb.yml  release.yml
core/: archive_policy.c  archive_policy.h  audio_queue.c  audio_queue.h  frame_pool.c  frame_pool.h  jitter_buffer.c  jitter_buffer.h  level_meter.c  level_meter.h  log.c  log.h  ptp_clock.c  ptp_clock.h  sap_discovery.c  sap_discovery.h  sdp_parser.c  sdp_parser.h  vox.c  vox.h  worker.c  worker.h
debian/: changelog  control  copyright  rules
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPER.md  FILE_REFERENCE.md  INSTALLATION.md  STREAM_DISCOVERY.md  USER_GUIDE.md
input/: aes_input.c  aes_input.h  pipewire_input.c  pipewire_input.h
packaging/: README.md  audyn.service  build-deb.sh
packaging/debian/DEBIAN/: conffiles  control  postinst  postrm  prerm
packaging/debian/etc/logrotate.d/: audyn
packaging/debian/etc/nginx/sites-available/: audyn
packaging/debian/lib/systemd/system/: audyn-web.service
packaging/debian/opt/audyn/scripts/: harden-system.sh
sink/: opus_sink.c  opus_sink.h  wav_sink.c  wav_sink.h
tools/: sap_announce.py
web/: docker-compose.yml
web/backend/: Dockerfile  requirements.txt
web/backend/app/: __init__.py  main.py  models.py
web/backend/app/api/: assets.py  control.py  discovery.py  recorders.py  sources.py  stream.py  studios.py  system.py
web/backend/app/auth/: entra.py
web/backend/app/services/: audyn.py  config_store.py  recorder_manager.py  sap_discovery.py
web/backend/app/websocket/: levels.py
web/backend/scripts/: mock_audyn.sh
web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.vue  main.js
web/frontend/src/assets/: main.css
web/frontend/src/components/: AudioMeter.vue  AudioPlayer.vue  CompactMeter.vue  MiniMeter.vue  RecorderCard.vue  StreamBrowser.vue
web/frontend/src/plugins/: router.js  vuetify.js
web/frontend/src/stores/: auth.js  capture.js  localPlayback.js  player.js  recorders.js  studios.js
web/frontend/src/views/: Dashboard.vue  Files.vue  Login.vue  Overview.vue  RecorderDetail.vue  Recorders.vue  Settings.vue  Sources.vue  StudioSelector.vue  StudioView.vue  Studios.vue
